<resources>
    <string name="app_name">Kidzoon</string>

    <string name="noConnection">No Internet Connection available.</string>
    <string name="turnOnInternet">Turn On your Internet !!</string>
    <string name="mobileData">Mobile data</string>
    <string name="wifi">WIFI</string>
    <string name="server_error">Sorry Server is facing some technical issues. please try after some time.</string>
    <string name="arabic">العربية</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="to_share_your_memories">to Share your memories</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="signin_signup">Sign in/Sign Up</string>
    <string name="sign_in_with_password">Sign in with Password</string>
    <string name="email">Email</string>
    <string name="email_mobile">Email/Mobile</string>
    <string name="password">Password</string>
    <string name="signIn">Sign in</string>
    <string name="sign_in_with_otp">Sign in with OTP</string>
    <string name="please_enter_4_digit_otp_sent_on_your_number_as_sms">Please, enter 4-digit code we sent on your number as SMS</string>
    <string name="didnt_receive_any_code">Didn\'t received any code?</string>
    <string name="resend_a_new_code">Resend a new Code</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next">Next</string>
    <string name="what_is_your_gender">What is your gender?</string>
    <string name="what_is_your_name">What\'s your name?</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="setup_your_profile">Setup Your Profile</string>
    <string name="your_name">Your Name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="lets_start">Let\'s Start</string>
    <string name="feeds">Feeds</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_story">Add Story</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="my_profile">My Profile</string>
    <string name="friends">Friends</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="timeline">Timeline</string>
    <string name="photos">Photos</string>
    <string name="search">Search</string>
    <string name="friends_you_may_know">Friends you may know</string>
    <string name="view_all">View All</string>
    <string name="videos">Videos</string>
    <string name="share">Share</string>
    <string name="create_post">Create Post</string>
    <string name="write_here">Write here</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="post_share_with">Post share with</string>
    <string name="friends_only">Friends Only</string>
    <string name="your_friends_on_kidzoon">Your friends on kidzoon</string>
    <string name="publicly">Publicly</string>
    <string name="anyone_can_who_is_not_your_friend">Anyone can, who is not your friend</string>
    <string name="only_me">Only Me</string>
    <string name="profile_information">Profile Information</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="change_language">Change Language</string>
    <string name="share_app">Share App</string>
    <string name="log_out">Log Out</string>
    <string name="english">English</string>
    <string name="gender">Gender</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_profile">Save Profile</string>
    <string name="shareApp">Share App</string>
    <string name="notifications">Notifications</string>
    <string name="all_posts">All Posts</string>
    <string name="friend_request">Friend Request</string>
    <string name="follow_request">Follow Request</string>
    <string name="add_friend">Add Friend</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="find_friends">Find Friends</string>
    <string name="find_friends_nearby">Find friends nearby</string>
    <string name="view_all_comments">View all Comments</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="reply">Reply</string>
    <string name="view_more_replies">View more replies...</string>
    <string name="report">Report</string>
    <string name="unfriend">Unfriend</string>
    <string name="mobile_required">Mobile Number is required</string>
    <string name="mobile_invalid">Mobile Number is invalid</string>
    <string name="email_required">Email is required</string>
    <string name="email_invalid">Invalid Email</string>
    <string name="password_required">Password is required</string>
    <string name="password_invalid">Invalid Password</string>
    <string name="username_required">UserName is required</string>
    <string name="remove_this_notification">Remove this Notification</string>
    <string name="edit">Edit</string>
    <string name="report_this_user">Report this User</string>
    <string name="years">Years</string>
    <string name="online">Online</string>
    <string name="write_to_reply">Write to reply...</string>
    <string name="user_id">User ID</string>
    <string name="read_more">Read more...</string>
    <string name="please_select_a_problem_to_continue">Please select a problem to continue</string>
    <string name="you_can_report_the_post_after_selecting_a_problem">You can report the post after selecting a problem.</string>
    <string name="enter_here">Enter here</string>
    <string name="done">Done</string>
    <string name="edit_post">Edit Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="public_">Public</string>
    <string name="who_can_see_your_post">Who can see your post?</string>
    <string name="your_post_will_show_up_in_news_feed_on_your_profile_and_in_search_results">Your post will show up in News Feed, on your profile and in search results.</string>
    <string name="learn_more_about">Learn more about</string>
    <string name="post_privacy">Post Privacy</string>
    <string name="anyone_on_or_off_kidzoon">Anyone on or off Kidzoon</string>
    <string name="your_friend_on_kidzoon">Your friend on Kidzoon</string>
    <string name="friends_except">Friends Except...</string>
    <string name="dont_show_to_some_friends">Don\'t show to some Friends</string>
    <string name="specific_friends">Specific Friends</string>
    <string name="only_show_to_some_friends">Only show to some friends</string>
    <string name="select_privacy">Select Privacy</string>
    <string name="enter_youtube_url">Enter Youtube URL</string>
    <string name="youtube_url">Youtube URL</string>
    <string name="continue_">Continue</string>
    <string name="user_name">User Name</string>
    <string name="save_user_name">Save Username</string>
    <string name="your_username_must_be_15_characters_or_less_and_contain_only_letters_numbers_and_underscores_and_no_spaces">\@Your username must be 15 characters or less and contain only letters, numbers, and underscores and no spaces.</string>
    <string name="country">Country</string>
    <string name="search_country">Search Country</string>
    <string name="date_of_birth_required">Date of Birth Required</string>
    <string name="level">Level</string>
    <string name="posts">Posts</string>
    <string name="likes">Likes</string>
    <string name="comment">Comment</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="capture">Capture</string>


</resources>
