<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ReportActivity"
   android:padding="20dp">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:paddingTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:src="@drawable/skip"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <ImageView
        android:id="@+id/ivReport"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/report_red"
        app:layout_constraintTop_toBottomOf="@id/ivClose"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvMsg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select_a_problem_to_continue"
        android:textColor="@color/colorDark"
        android:fontFamily="@font/bold_italic"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivReport"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:textAlignment="viewStart"/>


    <TextView
        android:id="@+id/tvMsg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_can_report_the_post_after_selecting_a_problem"
        android:textColor="@color/colorDarkGrey"
        android:fontFamily="@font/bold_italic"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMsg1"
        android:gravity="start"
        android:textAlignment="viewStart"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvReportProblem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMsg2"
        android:layout_marginTop="10dp"/>


    <EditText
        android:id="@+id/etEnterProblem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_edittext_bg"
     app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/rvReportProblem"
        android:hint="@string/enter_here"
        android:fontFamily="@font/bold_italic"
        android:padding="10dp"
        android:textSize="14sp"
        android:textColor="@color/colorDark"/>


    <TextView
        android:id="@+id/tvDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/bold_italic"
        android:paddingStart="50dp"
        android:paddingTop="15dp"
        android:paddingEnd="50dp"
        android:paddingBottom="15dp"
        android:text="@string/done"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>