<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rlMain"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_dialog_country"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="15dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textSize="13sp"
                    android:padding="8dp"
                    android:id="@+id/tvCancel"
                    android:textStyle="bold"
                    android:fontFamily="@font/bold_italic"
                    android:textColor="@color/colorTextRed"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:textAlignment="center"
                    android:textSize="13sp"
                    android:layout_centerHorizontal="true"
                    android:padding="8dp"
                    android:fontFamily="@font/bold_italic"
                    android:textColor="@color/colorDark"/>



            </RelativeLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/carousel_item_bg"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:drawableStart="@drawable/ic_search"
                android:paddingTop="12dp"
                android:drawablePadding="10dp"
                android:id="@+id/etSearch"
                android:paddingBottom="12dp"
                android:hint="@string/search_country"
                android:textColorHint="@color/colorDarkGrey"
                android:textSize="12sp"
                android:fontFamily="@font/bold_italic"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/rvCountry"
            android:layout_margin="5dp"

            android:layout_height="match_parent"/>

    </LinearLayout>




</RelativeLayout>